deploy/k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  tls:
    - hosts:
        - dev.blueprint.tahir.dev
      secretName: blueprint-dev-tls
  rules:
    - host: dev.blueprint.tahir.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
